--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,9 +40,9 @@ jar.compress=false
 javac.classpath=\
     ${libs.jsf20.classpath}:\
     ${libs.primefaces.classpath}:\
-    ${reference.MOSISPersistencia.jar}:\
-    ${reference.MOSISBusiness.jar}:\
     ${libs.libs.classpath}:\
+    ${reference.MOSISBusiness.jar}:\
+    ${reference.MOSISPersistencia.jar}:\
     ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
@@ -72,8 +72,8 @@ javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
-project.MOSISBusiness=../../MOSIS/MOSISBusiness
-project.MOSISPersistencia=../../MOSIS/MOSISPersistencia
+project.MOSISBusiness=../MOSISBusiness
+project.MOSISPersistencia=../MOSISPersistencia
 reference.MOSISBusiness.jar=${project.MOSISBusiness}/dist/MOSISBusiness.jar
 reference.MOSISPersistencia.jar=${project.MOSISPersistencia}/dist/MOSISPersistencia.jar
 resource.dir=setup
