--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -29,7 +29,8 @@ libs.libs.classpath=\
     ${base}/jandex-2.0.0.Final.jar;\
     ${base}/javassist-3.20.0-GA.jar;\
     ${base}/jboss-logging-3.3.0.Final.jar;\
-    ${base}/slf4j-api-1.7.21.jar
+    ${base}/slf4j-api-1.7.21.jar;\
+    ${base}/libs/primefaces-5.3.jar
 libs.libs.displayName=libs
 libs.MySQLDriver.classpath=\
     ${base}/MySQLDriver/mysql-connector-java-5.1.23-bin.jar
