--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.quartz-2.2.1-sources.jar=lib/quartz-2.2.1-sources.jar
+file.reference.quartz-2.2.1.jar=lib/quartz-2.2.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +44,10 @@ javac.classpath=\
     ${libs.libs.classpath}:\
     ${reference.MOSISBusiness.jar}:\
     ${reference.MOSISPersistencia.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.JasperReports_2.classpath}:\
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.quartz-2.2.1-sources.jar}:\
+    ${file.reference.quartz-2.2.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
